# aho-corasick

./: .eslintrc.js  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: nodejs.yml
__tests__/: aho-corasick.spec.ts
benches/: benchmark-aho-corasick.ts  benchmark-building.ts  benchmark-fastscan.ts  benchmark-matching.ts  benchmark.sh  benchmark.ts  compilation.ts  matching.ts  patterns.txt  utils.js  utils.ts
benches/aho-corasick/: benchmark.ts
benches/fastscan/: benchmark.ts
benchmark/: benchmark-aho-corasick.ts  benchmark-fastscan.ts  benchmark.sh  fastscan.ts  utils.ts
native/: Cargo.toml
native/src/: lib.rs
src/: addon.ts  aho-corasick.ts  index.ts  types.ts
