[package]
name = "aho-corasick"
version = "0.1.0"
authors = ["BlackGlory <woshenmedoubuzhidao@blackglory.me>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "aho_corasick"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.0"

[dependencies]
neon = "0.8.0"
aho-corasick = "0.7"
