[package]
name = "aho-corasick"
version = "0.1.0"
authors = ["BlackGlory <woshenmedoubuzhidao@blackglory.me>"]
license = "MIT"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "aho_corasick"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
daachorse = "1.0.0-rc.1"
rayon = "1.6.0"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6"]
